# test

famtoolapp/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
famtoolapp/app/: build.gradle.kts  proguard-rules.pro
famtoolapp/app/src/main/: AndroidManifest.xml
famtoolapp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
famtoolapp/app/src/main/res/drawable/: dark_button_background.xml  dark_input_background.xml  ic_child_care.xml  ic_shield_24.xml
famtoolapp/app/src/main/res/layout/: activity_lock.xml  activity_main_child.xml  activity_register.xml
famtoolapp/app/src/main/res/mipmap-anydpi-v26/: c_launcher_round.xml
famtoolapp/app/src/main/res/values/: colors.xml  dimens.xml  ic_vv_background.xml  strings.xml  styles.xml
famtoolapp/child login/: build.gradle.kts  gradle.properties  settings.gradle.kts
famtoolapp/child login/app/: build.gradle.kts  google-services.json  proguard-rules.pro
famtoolapp/child login/app/src/main/: AndroidManifest.xml
famtoolapp/child login/app/src/main/cpp/: native-lib.cpp
famtoolapp/child login/app/src/main/res/drawable/: background.xml  border_fragment.xml  ic_child_care_red.xml  ic_layers_24.xml  ic_notifications_24.xml  launch.xml
famtoolapp/child login/app/src/main/res/layout/: activity_login.xml
famtoolapp/child login/app/src/main/res/raw/: keep.xml
famtoolapp/child login/app/src/main/res/values/: strings.xml  styles.xml
famtoolapp/child login/gradle/wrapper/: gradle-wrapper.properties
famtoolapp/gradle/wrapper/: gradle-wrapper.properties
(+154 files in other folders)
